- new internal variables:
  * %day%, %month% and %year% which return the numeric day, month and year
    (with century) of an event
  * %chgrp% returns the VDR channel group name corresponding to an event    
- french translation update, thanks to Patrice Staudt
- italian translation update, thanks to Diego Pierotto
- new SVDRP command 'MENU [NOW|PRG|SUM]' to call one of the main OSD menus or 
  the summary of the current event

fixes:
- fixed a crash when pressing 'Ok' in an empty timers done menu
- fixed a crash when using the progressbar and events with 0 duration exist, thanks 
  to egal@vdrportal
- when an incomplete recording triggers a search timer update for a search timer 
  with 'avoid repeats' now running events are ignored for the repeats.
- now using cCondWait::Wait instead of cCondWait:SleepMs to avoid shutdown problems,
  thanks to e9hack@vdrportal for providing a patch

2008-04-29: Version 0.9.24
new:
- support for vdr-1.6.x/1.7.x
- speedup in searching and search timer updates (about 25%)
- speedup in EPG menues, thanks to patch authors from http://www.open7x0.org
- support for VDRSymbols font (activate it with 'WarEagle=1' in epgsearchmenu.conf)
- the EPG command 'Search in recordings' now evaluates the info.vdr instead of the
  recordings path name and also does fuzzy searching, suggested by Mase@vdrportal
- search timers with action 'switch only' and switch timers now have an additional 
  option 'unmute sound' which unmutes audio at the event, if it was off, suggested 
  by Michael Brückner
- the timer update notification mails supports now an additional variable 
  %timer.modreason%, that holds the reason for a timer update in plain text (see
  epgsearchupdmail(-html).templ for a sample)
- support for a conf.d mechanism (s. MANUAL -> 14. The conf.d subdirectory), suggested
  by Mike Constabel.
- new SVDRP command 'LSCC' that returns the results of a timer conflict 
  check. See the MANUAL for details about the format of the result list.