@@ -10,7 +10,8 @@ neu:
 - Update der französischen Übersetzung, Danke an Patrice Staudt
 - Update der italienischen Übersetzung, Danke an Diego Pierotto
 - neues SVDRP-Kommando 'MENU [NOW|PRG|SUM]' zum Aufruf eines der OSD-Hauptmenüs
-  oder der Inhaltsangabe der aktuellen Sendung.
+  oder der Inhaltsangabe der aktuellen Sendung. Falls irgendein epgsearch-Menü 
+  geöffnet ist, schließt ein weiteres SVDRP-Kommando dieses wieder.
 
 fixes:
 - Absturz beim Drücken von 'Ok' in leerem Menü erledigter Timer behoben
