@@ -10,7 +10,8 @@ new:
 - french translation update, thanks to Patrice Staudt
 - italian translation update, thanks to Diego Pierotto
 - new SVDRP command 'MENU [NOW|PRG|SUM]' to call one of the main OSD menus or 
-  the summary of the current event
+  the summary of the current event. If any epgsearch menu is open a subsequent
+  SVDRP call will close it again.
 
 fixes:
 - fixed a crash when pressing 'Ok' in an empty timers done menu
